--- a/habitwise_app/pubspec.yaml
+++ b/habitwise_app/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   shared_preferences: ^2.2.2
   intl: ^0.19.0
   cupertino_icons: ^1.0.8
+  cloud_firestore: ^4.16.0
+  flutter_local_notifications: ^16.3.2
+  timezone: ^0.9.4
+  firebase_auth: ^4.17.5
 
 dev_dependencies:
   flutter_test:
